[package]
name = "kolloquy-offload-server"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
opt-level = 3
debug = false
codegen-units = 1
panic = "abort"

[dependencies]
argon2 = "0.6.0-rc.7"
axum = { version = "0.8.8", features = ["http2", "tracing"] }
base64 = "0.22.1"
dotenv = "0.15.0"
region = "3.0.2"
serde = { version  = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "tracing"] }
zeroize = "1.8.2"
